# penguin-pal-releases

./: .gitignore  CODEX_GUIDE.md  NEXT_SESSION_TODO.md  README.md  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  setup-cmake.ps1  setup-llvm.ps1  setup-ninja.ps1  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/resources/codex/: README.md
src-tauri/src/: app_state.rs  app_update.rs  codex_runtime.rs  codex_update.rs  desktop.rs  history.rs  lib.rs  main.rs  research.rs  session_thread.rs  tray.rs  window.rs
src-tauri/src/agent/: agent_turn.rs  domain_loop_planner.rs  executor.rs  intent.rs  intent_classifier.rs  loop_planner.rs  loop_prompt.rs  mod.rs  model_adapter.rs  planner.rs  prompt.rs  router.rs  runtime_binding.rs  runtime_context.rs  screen_context.rs  screen_planner.rs  screen_reconciler.rs  session_turn.rs  task_store.rs  test_assertions.rs  test_loop_planner.rs  test_loop_prompt.rs  types.rs  vision_analyzer.rs  vision_context.rs  vision_types.rs  workspace_context.rs  workspace_loop_planner.rs  workspace_loop_prompt.rs
src-tauri/src/ai/: guardrails.rs  memory.rs  mod.rs  provider.rs
src-tauri/src/audio/: mod.rs  model_manager.rs  recorder.rs  transcriber.rs  tts.rs  types.rs  whisper.rs
src-tauri/src/codex_config/: config.rs  mod.rs  rules.rs  sessions.rs  skills.rs
src-tauri/src/control/: errors.rs  files.rs  http.rs  installer.rs  logging.rs  mod.rs  pending.rs  policy.rs  registry.rs  router.rs  shell.rs  system_registry.rs  (+1 more)
(+71 files in other folders)
