[package]
name = "penguin-pal"
version = "0.2.0"
description = "AI Desktop Pet Assistant"
authors = ["PenguinPal Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
base64 = "0.22"
# === Whisper 语音识别依赖 ===
whisper-rs = "0.12"
cpal = "0.15"
ringbuf = "0.4"
parking_lot = "0.12"
futures-util = "0.3"
tokio = { version = "1", features = ["sync"] }
rand = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3.10"
